--- a/index.html
+++ b/index.html
@@ -18,6 +18,54 @@
                     <h4 class="category__title">Strandene i Sønderborg</h4>
                     <span class="material-symbols-outlined category__arrow">chevron_right</span>
                 </div>
+                <ul class="category__content">
+                    <li class="location">
+                        <input type="checkbox" id="strand-1" class="location__checkbox">
+                        <label for="strand-1" class="location__label">Kegnæs Strand</label>
+                    </li>
+                    <li class="location">
+                        <input type="checkbox" id="strand-2" class="location__checkbox">
+                        <label for="strand-2" class="location__label">Nordborg Strand</label>
+                    </li>
+                    <li class="location">
+                        <input type="checkbox" id="strand-3" class="location__checkbox">
+                        <label for="strand-3" class="location__label">Mommark Strand</label>
+                    </li>
+                </ul>
+            </div>
+            <div class="category">
+                <div class="category__header" onclick="toggleCategory(this)">
+                    <span class="material-symbols-outlined category__icon">hiking</span>
+                    <h4 class="category__title">Gå- og cykelture</h4>
+                    <span class="material-symbols-outlined category__arrow">chevron_right</span>
+                </div>
+                <div class="category__content">
+                </div>
+            </div>
+            <div class="category">
+                <div class="category__header" onclick="toggleCategory(this)">
+                    <span class="material-symbols-outlined category__icon">shopping_bag</span>
+                    <h4 class="category__title">Shopping</h4>
+                    <span class="material-symbols-outlined category__arrow">chevron_right</span>
+                </div>
+                <div class="category__content">
+                </div>
+            </div>
+            <div class="category">
+                <div class="category__header" onclick="toggleCategory(this)">
+                    <span class="material-symbols-outlined category__icon">diversity_1</span>
+                    <h4 class="category__title">Kultur</h4>
+                    <span class="material-symbols-outlined category__arrow">chevron_right</span>
+                </div>
+                <div class="category__content">
+                </div>
+            </div>
+            <div class="category">
+                <div class="category__header" onclick="toggleCategory(this)">
+                    <span class="material-symbols-outlined category__icon">sports_gymnastics</span>
+                    <h4 class="category__title">Aktiv sammen</h4>
+                    <span class="material-symbols-outlined category__arrow">chevron_right</span>
+                </div>
                 <div class="category__content">
                 </div>
             </div>
