--- a/index.html
+++ b/index.html
@@ -71,7 +71,24 @@
             </div>
         </div>
         <div class="map">
-            
+            <div class="map-pin" id="pin-strand-1" style="left: 20%; top: 60%;">
+                <svg viewBox="0 0 24 24" fill="#3498db" stroke="white" stroke-width="1">
+                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                    <circle cx="12" cy="10" r="3"/>
+                </svg>
+            </div>
+            <div class="map-pin" id="pin-strand-2" style="left: 45%; top: 30%;">
+                <svg viewBox="0 0 24 24" fill="#3498db" stroke="white" stroke-width="1">
+                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                    <circle cx="12" cy="10" r="3"/>
+                </svg>
+            </div>
+            <div class="map-pin" id="pin-strand-3" style="left: 70%; top: 45%;">
+                <svg viewBox="0 0 24 24" fill="#3498db" stroke="white" stroke-width="1">
+                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                    <circle cx="12" cy="10" r="3"/>
+                </svg>
+            </div>
         </div>
     </div>
     <script src="main.js"></script>
