--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 </div>
                 <ul class="category__content">
                     <li class="location">
-                        <input type="checkbox" id="strand-1" class="location__checkbox">
+                        <input type="checkbox" id="strand-1" class="location__checkbox" checked onchange="toggleLocation('strand-1')">
                         <label for="strand-1" class="location__label">Kegnæs Strand</label>
                     </li>
                     <li class="location">
-                        <input type="checkbox" id="strand-2" class="location__checkbox">
+                        <input type="checkbox" id="strand-2" class="location__checkbox" checked onchange="toggleLocation('strand-2')">
                         <label for="strand-2" class="location__label">Nordborg Strand</label>
                     </li>
                     <li class="location">
-                        <input type="checkbox" id="strand-3" class="location__checkbox">
+                        <input type="checkbox" id="strand-3" class="location__checkbox" checked onchange="toggleLocation('strand-3')">
                         <label for="strand-3" class="location__label">Mommark Strand</label>
                     </li>
                 </ul>
