--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                 <ul class="category__content">
                     <li class="location">
                         <input type="checkbox" id="strand-1" class="location__checkbox" checked onchange="toggleLocation('strand-1')">
-                        <label for="strand-1" class="location__label">Kegnæs Strand</label>
+                        <label for="strand-1" class="location__label">Fluepapiret</label>
                     </li>
                     <li class="location">
                         <input type="checkbox" id="strand-2" class="location__checkbox" checked onchange="toggleLocation('strand-2')">
-                        <label for="strand-2" class="location__label">Nordborg Strand</label>
+                        <label for="strand-2" class="location__label">Den Sorte Badestrand</label>
                     </li>
                     <li class="location">
                         <input type="checkbox" id="strand-3" class="location__checkbox" checked onchange="toggleLocation('strand-3')">
-                        <label for="strand-3" class="location__label">Mommark Strand</label>
+                        <label for="strand-3" class="location__label">Toøren</label>
                     </li>
                 </ul>
             </div>
@@ -39,8 +39,20 @@
                     <h4 class="category__title">Gå- og cykelture</h4>
                     <span class="material-symbols-outlined category__arrow">chevron_right</span>
                 </div>
-                <div class="category__content">
-                </div>
+                <ul class="category__content">
+                     <li class="location">
+                        <input type="checkbox" id="tur-1" class="location__checkbox" checked onchange="toggleLocation('tur-1')">
+                        <label for="tur-1" class="location__label">Naturpark Nordals</label>
+                    </li>
+                    <li class="location">
+                        <input type="checkbox" id="tur-2" class="location__checkbox" checked onchange="toggleLocation('tur-2')">
+                        <label for="tur-2" class="location__label">Gendarmstien</label>
+                    </li>
+                    <li class="location">
+                        <input type="checkbox" id="tur-3" class="location__checkbox" checked onchange="toggleLocation('tur-3')">
+                        <label for="tur-3" class="location__label">Nordkysten på Als</label>
+                    </li>
+                </ul>
             </div>
             <div class="category">
                 <div class="category__header" onclick="toggleCategory(this)">
@@ -49,6 +61,18 @@
                     <span class="material-symbols-outlined category__arrow">chevron_right</span>
                 </div>
                 <div class="category__content">
+                     <div class="location">
+                        <input type="checkbox" id="shop-1" class="location__checkbox" checked onchange="toggleLocation('shop-1')">
+                        <label for="shop-1" class="location__label">Borgen Shopping</label>
+                    </div>
+                    <div class="location">
+                        <input type="checkbox" id="shop-2" class="location__checkbox" checked onchange="toggleLocation('shop-2')">
+                        <label for="shop-2" class="location__label">Nordborg Center</label>
+                    </div>
+                    <div class="location">
+                        <input type="checkbox" id="shop-3" class="location__checkbox" checked onchange="toggleLocation('shop-3')">
+                        <label for="shop-3" class="location__label">Augustenborg Butikker</label>
+                    </div>
                 </div>
             </div>
             <div class="category">
@@ -58,6 +82,18 @@
                     <span class="material-symbols-outlined category__arrow">chevron_right</span>
                 </div>
                 <div class="category__content">
+                    <div class="location">
+                        <input type="checkbox" id="kultur-1" class="location__checkbox" checked onchange="toggleLocation('kultur-1')">
+                        <label for="kultur-1" class="location__label">Augustenborg Slot</label>
+                    </div>
+                    <div class="location">
+                        <input type="checkbox" id="kultur-2" class="location__checkbox" checked onchange="toggleLocation('kultur-2')">
+                        <label for="kultur-2" class="location__label">Sønderborgs Sydhavn</label>
+                    </div>
+                    <div class="location">
+                        <input type="checkbox" id="kultur-3" class="location__checkbox" checked onchange="toggleLocation('kultur-3')">
+                        <label for="kultur-3" class="location__label">Nordals Museum</label>
+                    </div>
                 </div>
             </div>
             <div class="category">
@@ -67,6 +103,18 @@
                     <span class="material-symbols-outlined category__arrow">chevron_right</span>
                 </div>
                 <div class="category__content">
+                    <div class="location">
+                        <input type="checkbox" id="aktiv-1" class="location__checkbox" checked onchange="toggleLocation('aktiv-1')">
+                        <label for="aktiv-1" class="location__label">Universe Science Park</label>
+                    </div>
+                    <div class="location">
+                        <input type="checkbox" id="aktiv-2" class="location__checkbox" checked onchange="toggleLocation('aktiv-2')">
+                        <label for="aktiv-2" class="location__label">Als Aktivitetspark</label>
+                    </div>
+                    <div class="location">
+                        <input type="checkbox" id="aktiv-3" class="location__checkbox" checked onchange="toggleLocation('aktiv-3')">
+                        <label for="aktiv-3" class="location__label">Sønderborg Padel Center</label>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,6 +127,51 @@
             </div>
             <div class="map__pin" id="pin-strand-3" style="left: 70%; top: 45%;">
                 <img src="media/BeachPin.svg" alt="">
+            </div>
+
+            <!-- hiking pins -->
+             <div class="map__pin" id="pin-tur-1" style="left: 35%; top: 55%;">
+                <img src="media/ShoePin.svg" alt="">
+            </div>
+            <div class="map__pin" id="pin-tur-2" style="left: 60%; top: 35%;">
+                <img src="media/ShoePin.svg" alt="">
+            </div>
+            <div class="map__pin" id="pin-tur-3" style="left: 50%; top: 70%;">
+                <img src="media/BikePin.svg" alt="">
+            </div>
+
+            <!-- shopping pins -->
+             <div class="map__pin" id="pin-shop-1" style="left: 40%; top: 50%;">
+                <img src="media/ShoppingPin.svg" alt="">
+            </div>
+            <div class="map__pin" id="pin-shop-2" style="left: 48%; top: 32%;">
+                <img src="media/ShoppingPin.svg" alt="">
+            </div>
+            <div class="map__pin" id="pin-shop-3" style="left: 52%; top: 68%;">
+                <img src="media/ShoppingPin.svg" alt="">
+            </div>
+
+            <!-- culture pins -->
+             <div class="map__pin" id="pin-kultur-1" style="left: 55%; top: 65%;">
+                <img src="media/CulturePin.svg" alt="">
+            </div>
+            <div class="map__pin" id="pin-kultur-2" style="left: 65%; top: 40%;">
+                <img src="media/CulturePin.svg" alt="">
+            </div>
+            <div class="map__pin" id="pin-kultur-3" style="left: 30%; top: 40%;">
+                <img src="media/CulturePin.svg" alt="">
+            </div>
+
+            <!-- activity pins -->
+             <div class="map__pin" id="pin-aktiv-1" style="left: 42%; top: 45%;">
+                <img src="media/ActivePin.svg" alt="">
+            </div>
+            <div class="map__pin" id="pin-aktiv-2" style="left: 25%; top: 50%;">
+                <img src="media/ActivePin.svg" alt="">
+                </svg>
+            </div>
+            <div class="map__pin" id="pin-aktiv-3" style="left: 46%; top: 28%;">
+                <img src="media/ActivePin.svg" alt="">
             </div>
         </div>
     </div>
