--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </li>
                     <li class="location">
                         <input type="checkbox" id="strand-3" class="location__checkbox" checked onchange="toggleLocation('strand-3')">
-                        <label for="strand-3" class="location__label">Toøren</label>
+                        <label for="strand-3" class="location__label">Dybbøl Strand</label>
                     </li>
                 </ul>
             </div>
@@ -53,7 +53,7 @@
                     </li>
                     <li class="location">
                         <input type="checkbox" id="tur-3" class="location__checkbox" checked onchange="toggleLocation('tur-3')">
-                        <label for="tur-3" class="location__label">Nordkysten på Als</label>
+                        <label for="tur-3" class="location__label">Alsstien</label>
                     </li>
                 </ul>
             </div>
@@ -70,11 +70,11 @@
                     </div>
                     <div class="location">
                         <input type="checkbox" id="shop-2" class="location__checkbox" checked onchange="toggleLocation('shop-2')">
-                        <label for="shop-2" class="location__label">Nordborg Center</label>
+                        <label for="shop-2" class="location__label">Dansk Sønderborg</label>
                     </div>
                     <div class="location">
                         <input type="checkbox" id="shop-3" class="location__checkbox" checked onchange="toggleLocation('shop-3')">
-                        <label for="shop-3" class="location__label">Augustenborg Butikker</label>
+                        <label for="shop-3" class="location__label">WestWind Sønderborg</label>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <div class="category__content">
                     <div class="location">
                         <input type="checkbox" id="kultur-1" class="location__checkbox" checked onchange="toggleLocation('kultur-1')">
-                        <label for="kultur-1" class="location__label">Augustenborg Slot</label>
+                        <label for="kultur-1" class="location__label">Sønderborg Slot</label>
                     </div>
                     <div class="location">
                         <input type="checkbox" id="kultur-2" class="location__checkbox" checked onchange="toggleLocation('kultur-2')">
@@ -95,7 +95,7 @@
                     </div>
                     <div class="location">
                         <input type="checkbox" id="kultur-3" class="location__checkbox" checked onchange="toggleLocation('kultur-3')">
-                        <label for="kultur-3" class="location__label">Nordals Museum</label>
+                        <label for="kultur-3" class="location__label">Historiecenter Dybbøl Banke</label>
                     </div>
                 </div>
             </div>
