--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="mapContainer">
         <div class="sidebar">
-            <h1 class="sidebar__title">Opdag Als</h1>
+            <h1 class="sidebar__title">Opdag området</h1>
 
             <div class="category">
                 <div class="category__header" onclick="toggleCategory(this)">
